# Sim_HumanoidRobot_Loong

./: README.md
AzureLoong_learning_Sim/Azureloong_PPO/: AzuLoong.xml  run_def_loong_ppo_mujoco.py
AzureLoong_learning_Sim/azureloong_description/src/azureloong_description/: CMakeLists.txt  package.xml
AzureLoong_learning_Sim/azureloong_description/src/azureloong_description/config/: joint_names.yaml  robot_control.yaml  robot_control_eef.yaml  robot_control_geef.yaml  robot_control_pos.yaml
AzureLoong_learning_Sim/azureloong_description/src/azureloong_description/launch/: display.launch  gazebo.launch
AzureLoong_learning_Sim/azureloong_description/src/azureloong_description/rviz/: azureloong.rviz
AzureLoong_learning_Sim/azureloong_description/src/azureloong_description/urdf/: AzureLoong.urdf
