<package format="2">
  <name>azureloong_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package.</p>
    <p>This package contains configuration data, 3D models and launch files for AzureLoong robot.</p>
  </description>
  <author>Qinghua Ma</author>
  <maintainer email="956473807@qq.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
